# things3-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  cli.py  generate_rust_fixtures.py  pyproject.toml  tests_rust_parity.py
.github/workflows/: bump.yml  cut-release.yml  main.yml  publish.yml  release.yml  tests.yml
src/: app.rs  arg_types.rs  auth.rs  client.rs  cloud_writer.rs  cmd_ctx.rs  common.rs  dirs.rs  ids.rs  lib.rs  log_cache.rs  logging.rs  main.rs  store.rs  things_id.rs  wire.rs  wire_tests.rs
src/commands/: anytime.rs  area.rs  areas.rs  delete.rs  edit.rs  find.rs  inbox.rs  logbook.rs  mark.rs  mod.rs  new.rs  project.rs  projects.rs  reorder.rs  schedule.rs  set_auth.rs  someday.rs  tags.rs  today.rs  upcoming.rs  webserver.rs
src/ids/: matching.rs
src/store/: entities.rs  mod.rs
src/ui/: mod.rs  utils.rs
src/wire/: checklist.rs  mod.rs  tags.rs  task.rs
tests/: parity.rs  test_cli_delete.py  test_cli_edit.py  test_cli_mark.py  test_cli_new.py  test_integration_cmd_anytime.py  test_integration_cmd_edit.py  test_integration_cmd_mark.py  test_integration_cmd_project.py  test_integration_cmd_reorder.py  test_integration_cmd_tags.py  test_integration_cmd_today.py  test_store_logbook.py
tests/command/: common.rs  mod.rs  test_anytime.rs  test_area.rs  test_areas.rs  test_find.rs  test_inbox.rs  test_logbook.rs  test_project.rs  test_projects.rs  test_someday.rs  test_tags.rs  test_today.rs  test_upcoming.rs
tests/fixtures/: today_staged.txt  (+8 more)
things_cloud/: auth.py  client.py  dirs.py  ids.py  log_cache.py  schema.py  store.py
trycmd/: run.sh
(+194 files in other folders)
